tests/auto/qml/qmllint/data/ModuleWithJS/Foo.js
@@ -1,0 +1,6 @@
+.pragma library
+
+function somefunc(name)
+{
+    return "Hi, " + name;
+}
