tests/auto/qml/qmllint/data/javascriptMethodsInModuleBad.qml
@@ -1,0 +1,6 @@
+import QtQml 2.0
+import ModuleWithJS
+
+QtObject {
+    objectName: Foo.unknownFunc()
+}
